tests/ui/parser/recover/recover-field-extra-angle-brackets-in-struct-with-a-field.stderr
error: unmatched angle bracket
  --> $DIR/recover-field-extra-angle-brackets-in-struct-with-a-field.rs:2:25
   |
LL |     next: Option<String>>
   |                         ^
   |
help: remove extra angle bracket
   |
LL -     next: Option<String>>
LL +     next: Option<String>
   |

error: aborting due to 1 previous error

